# UAV_Dziani

./: .gitignore  DzianiBullage.py  DzianiEst.py  README.md  barge.py  build_subtitles.sh  cv2_parametres.py  dziani_interpolation.slurm  dziani_interpolation_BB.slurm  dziani_interpolation_SB.slurm  find_center.py  find_center.slurm  find_zone.py  full.sh  full.slurm  full_l.sh  logs  mean_alts_from_srt.sh  ok.py  optical_flow.py  plot_vitessses.py  pyproject.toml  requirements.txt  requirements_ini.txt  test.py  test.slurm  traitement.py  utils.py
