[project]
name = "uav-dziani"
version = "0.1.0"
description = "UAV Dziani - Analyse de vidéos de panaches volcaniques"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "codetiming==1.4.0",
    "contourpy==1.2.1",
    "cycler==0.12.1",
    "fonttools==4.60.2",
    "icecream==2.1.3",
    "kiwisolver==1.4.5",
    "matplotlib==3.9.0",
    "opencv-python==4.10.0.84",
    "packaging==24.0",
    "pillow==12.1.1",
    "pyparsing==3.1.2",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "psutil==6.0.0",
    "requests==2.32.4",
    "scipy==1.13.1",
    "six==1.16.0",
    "tqdm==4.67.1",
    "tslearn==0.6.3",
    "black>=26.3.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["*.py"]
